--- a/app.kv
+++ b/app.kv
@@ -4,8 +4,7 @@ BoxLayout:
 
     BoxLayout:
         orientation: 'horizontal'
-        size_hint: 1, None
-        height: 20
+        size_hint: (1, 0.1)
         Button:
             background_normal: ''
             background_color: 0,0,0,1
@@ -20,7 +19,7 @@ BoxLayout:
             background_normal: ''
             background_color: 0,0,0,1
             size_hint: None, None
-            size: 40, 20
+            width: 40
             text: 'Edit'
 #                id:
 #                values:
@@ -29,8 +28,8 @@ BoxLayout:
             background_normal: ''
             background_color: 0,0,0,1
             size_hint: None, None
-            size: 40, 20
-            text: 'File'
+            width: 40
+            text: 'Draw'
 #                id:
 #                values:
 
@@ -38,19 +37,84 @@ BoxLayout:
             background_normal: ''
             background_color: 0,0,0,1
             size_hint: None, None
-            size: 40, 20
-            text: 'File'
+            width: 40
+            text: 'Run'
 #                id:
 #                values:
         Button:
             background_normal: ''
             background_color: 0,0,0,1
             size_hint: None, None
-            size: 40, 20
-            text: 'File'
+            width: 40
+            text: 'Help'
 #                id:
 #                values:
+
     BoxLayout:
+        orientation: 'horizontal'
+        size_hint: (1, 0.9)
+        BoxLayout:
+            orientation: 'vertical'
+            size_hint: (0.2, 1)
+            Label:
+                text: 'Choose a chart type:'
+            Spinner:
+                text: app.first_chart
+                values: app.list_chart
+    #            on_text:
+                id: kind_chart
 
+            Button:
+                text: 'Draw'
+    #            on_press:
+        BoxLayout:
+            orientation: 'vertical'
+            size_hint: (0.8, 1)
+            BoxLayout:
+                orientation: 'horizontal'
+                size_hint: (1, 0.3)
+                BoxLayout:
+                    orientation: 'vertical'
+                    Label:
+                        text: 'Title:'
+                    TextInput:
+                        id: title
+                        multiline: False
+                        write_tab: False
+                BoxLayout:
+                    orientation: 'vertical'
+                    Label:
+                        text: 'Data:'
+                    TextInput:
+                        id: values
+                        multiline: False
+                        write_tab: False
+                BoxLayout:
+                    orientation: 'vertical'
+                    Label:
+                        text: 'Objects:'
+                    TextInput:
+                        id: objects
+                        multiline: False
+                        write_tab: False
+                BoxLayout:
+                    orientation: 'vertical'
+                    Label:
+                        text: 'Name:'
+                    TextInput:
+                        id: y_name
+                        multiline: False
+                        write_tab: False
+                BoxLayout:
+                    orientation: 'vertical'
+                    Label:
+                        text: 'Unit:'
+                    TextInput:
+                        id: unit
+                        multiline: False
+                        write_tab: False
 
-
+            BoxLayout:
+                size_hint: (1, 0.7)
+                background_normal: ''
+                background_color: 1,0,0,0
